# jdx-csv-lint

./: Cargo.toml  README.md
examples/data/: bad.csv  bad_email.csv
src/: cli.rs  lint_error.rs  linter.rs  linter_builder.rs  logger.rs  main.rs
src/checks/: email.rs  mod.rs
