[package]
name = "jdx-csv-lint"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "validates csv files"
authors = ["Jeffrey Dickey (@jdx)"]
repository = "https://github.com/jdx/jdx-csv-lint"
readme = "README.md"
keywords = ["csv"]
categories = ["command-line-utilities"]
include = [
  "src/**/*.rs",
  "README.md",
  "LICENSE",
]

[dependencies]
csv = "1.3.0"
