[package]
name = "jdx-csv-lint"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "validates csv files"
authors = ["Jeffrey Dickey (@jdx)"]
repository = "https://github.com/jdx/jdx-csv-lint"
readme = "README.md"
keywords = ["csv"]
categories = ["command-line-utilities"]
include = [
  "src/**/*.rs",
  "README.md",
  "LICENSE",
]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.5"
xx = "1.1.5"
