[package]
name = "jdx-csv-lint"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "validates csv files"
authors = ["Jeffrey Dickey (@jdx)"]
repository = "https://github.com/jdx/jdx-csv-lint"
readme = "README.md"
keywords = ["csv"]
categories = ["command-line-utilities"]
include = [
  "src/**/*.rs",
  "README.md",
  "LICENSE",
]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
color-print = "0.3.6"
csv = "1.3.0"
ctor = "0.2.8"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
regex = "1.10.5"
thiserror = "1.0.63"
xx = "1.1.5"
